Updated enterprise pricing

--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 21 2020 02:34:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 02:50:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -304,22 +304,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="content-parent">
         <div class="_1st-column">
           <div class="div-block-1338">
-            <h3 class="pricing-feat-detail">Multi-publication support (upcoming)</h3>
-            <div data-tippy-content="Create up to 3 publications on a single plan. Yep. Still unlimited bandwidth. For more, contact enterprise sales." data-w-id="610fa252-ec83-0361-2e92-779e72004cd5" class="tippy"><img src="images/More-Info.svg" loading="lazy" alt="" class="image-36"></div>
-          </div>
-        </div>
-        <div class="line"></div>
-        <div class="table-plan-content-parent">
-          <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row ticks">
-      <div class="content-parent">
-        <div class="_1st-column">
-          <div class="div-block-1338">
             <h3 class="pricing-feat-detail">Comments + Akismet spam protection</h3>
             <div data-tippy-content="Jraft comes with Coral Talk, a comment system used by major publishers like Vox, the Washington Post Post, and Fairfax Media." data-w-id="a17e9f27-915d-6e3e-e15e-378f7b6f8b56" class="tippy"><img src="images/More-Info.svg" loading="lazy" alt="" class="image-36"></div>
           </div>
@@ -407,9 +391,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-cta _2">
       <div class="div-block-1335">
         <h3 class="pre-cta-title">Jraft for Enterprise</h3>
-        <div class="pre-cta-content">Need to make custom modifications to Jraft, assisted migration, a custom ad solution, more users, and enterprise-grade scalability, security &amp; support? Jraft Enterprise provides it all.</div>
+        <div class="pre-cta-content">Need multi-publication support on a single plan, custom ad solutions or features, assisted migration, and enterprise-grade scalability, security &amp; support? Jraft Enterprise provides it all.</div>
       </div>
-      <div class="button-parent"><a href="mailto:hello@tryjraft.com?subject=Jraft%20for%20Enterprise" class="button square-corners w-button">Contact Sales</a></div>
+      <div class="button-parent"><a href="mailto:enterprise@tryjraft.com?subject=Jraft%20for%20Enterprise" class="button square-corners w-button">Contact Sales</a></div>
     </div>
   </div>
   <div class="pricing-more">
@@ -516,7 +500,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div>
         <h5 class="all-plans-titile">Can I have more than 1 publication on one plan?</h5>
-        <div class="all-plans-description">Not currently, but this is one of the first major features Jraft will roll out post-launch. Stay tuned!</div>
+        <div class="all-plans-description">On our enterprise plan, Jraft allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Jraft will cut 50% from your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
       </div>
     </div>
   </div>
