--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 21 2020 02:50:04 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 03:03:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -500,7 +500,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div>
         <h5 class="all-plans-titile">Can I have more than 1 publication on one plan?</h5>
-        <div class="all-plans-description">On our enterprise plan, Jraft allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Jraft will cut 50% from your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
+        <div class="all-plans-description">On our enterprise plan, Jraft allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Jraft will save you 80% of your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
       </div>
     </div>
   </div>
