--- a/pricing.html
+++ b/pricing.html
@@ -500,7 +500,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div>
         <h5 class="all-plans-titile">Can I have more than 1 publication on one plan?</h5>
-        <div class="all-plans-description">On our enterprise plan, Jraft allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Jraft will save you 80% of your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
+        <div class="all-plans-description">On our enterprise plan, Jraft allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Jraft will cut 80% of your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
       </div>
     </div>
   </div>
