updated for serps
- Added canonical
- renamed /engagement to engage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 20 2020 03:58:30 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 04:24:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
@@ -223,7 +223,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Infinity scroll</h3>
-            <div class="text-block-55">On average, readers consume 20% more content using <a href="engagement" class="landing-feature-link">infinity scroll</a>, meaning you earn 20% more from ads.</div>
+            <div class="text-block-55">On average, readers consume 20% more content using <a href="engage" class="landing-feature-link">infinity scroll</a>, meaning you earn 20% more from ads.</div>
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Perfect SEO, built in</h3>
@@ -231,11 +231,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Flexible integrations</h3>
-            <div class="text-block-55"><a href="engagement" class="landing-feature-link">Connect your marketing tools</a> with built-in integrations and the flexibility of custom code.</div>
+            <div class="text-block-55"><a href="engage" class="landing-feature-link">Connect your marketing tools</a> with built-in integrations and the flexibility of custom code.</div>
           </div>
         </div>
       </div>
-    </div><a href="engagement" class="button-2 engagement w-button">Explore Engagement Features</a></div>
+    </div><a href="engage" class="button-2 engagement w-button">Explore Engagement Features</a></div>
   <div class="div-block-1429 end">
     <div class="div-block-1442">
       <div class="div-block-1443"><img src="images/AWS.svg" loading="lazy" alt="Amazon Web Services Logo" class="image-61">
@@ -293,7 +293,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li><a href="manage" class="footer-text">Workflow</a></li>
             <li><a href="create" class="footer-text">Editor</a></li>
             <li><a href="build" class="footer-text">Builder</a></li>
-            <li><a href="engagement" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="engage" class="footer-text">Engage &amp; Earn</a></li>
             <li><a href="hosting" class="footer-text">Hosting &amp; Performance</a></li>
             <li><a href="pricing" class="footer-text">Pricing</a></li>
           </ul>
