--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 21 2020 03:03:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 04:24:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -27,8 +27,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5WLPRZG');</script>
   <!--  End Google Tag Manager  -->
-  <!-- This Loads the Light Theme Style -->
-  <link rel="stylesheet" href="https://unpkg.com/tippy.js@4/themes/light.css">
+  <link rel="canonical" href="https://www.tryjraft.com/pricing" <link="">
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
@@ -40,7 +39,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
@@ -500,7 +499,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div>
         <h5 class="all-plans-titile">Can I have more than 1 publication on one plan?</h5>
-        <div class="all-plans-description">On our enterprise plan, Jraft allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Jraft will cut 80% of your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
+        <div class="all-plans-description">On our enterprise plan, Jraft allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Jraft will save you 80% of your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
       </div>
     </div>
   </div>
@@ -539,7 +538,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li><a href="manage" class="footer-text">Workflow</a></li>
             <li><a href="create" class="footer-text">Editor</a></li>
             <li><a href="build" class="footer-text">Builder</a></li>
-            <li><a href="engagement" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="engage" class="footer-text">Engage &amp; Earn</a></li>
             <li><a href="hosting" class="footer-text">Hosting &amp; Performance</a></li>
             <li><a href="pricing" aria-current="page" class="footer-text w--current">Pricing</a></li>
           </ul>
