--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 21 2020 04:24:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 04:34:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="/" aria-current="page" class="nav-logo-link w-nav-brand w--current"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index" aria-current="page" class="nav-logo-link w-nav-brand w--current"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
