--- a/pricing.html
+++ b/pricing.html
@@ -31,7 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap"><a href="/" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
