--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Oct 28 2020 06:01:11 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 06 2020 13:23:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -104,14 +104,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h3 class="pricing-feat-top">Plan</h3>
         </div>
         <div class="table-plan-content-parent">
-          <div class="cell-div plan highlighted">
-            <h4 class="pricing-plan">Free</h4>
-          </div>
-          <div class="cell-div plan">
-            <h4 class="pricing-plan">Standard</h4>
-          </div>
           <div class="cell-div plan">
             <h4 class="pricing-plan">Plus</h4>
+          </div>
+          <div class="cell-div plan">
+            <h4 class="pricing-plan">Basic</h4>
+          </div>
+          <div class="cell-div plan highlighted">
+            <h4 class="pricing-plan">Free</h4>
           </div>
         </div>
       </div>
@@ -123,6 +123,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="plan-description monthly-price highlighted">Save 35% on annual subscriptions</div>
         </div>
         <div class="table-plan-content-parent">
+          <div class="cell-div pricing-details">
+            <div class="table-plan-content-parent-squared">
+              <div class="div-block-1329">
+                <div class="pricing-price">$16.90</div>
+                <div class="price-m">USD/user</div>
+              </div>
+              <div class="plan-description monthly-price">per month, paid annually, or $20.50 paid monthly</div>
+              <div class="plan-description">For larger, multi site publications or those seeking advanced features</div>
+            </div>
+            <a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a>
+          </div>
+          <div class="cell-div pricing-details">
+            <div class="table-plan-content-parent-squared">
+              <div class="div-block-1329">
+                <div class="pricing-price">$6.90</div>
+                <div class="price-m">USD/user</div>
+              </div>
+              <div class="plan-description monthly-price">per month, paid annually, or $8.50 paid monthly</div>
+              <div class="plan-description">Best for a small blog that doesn&#x27;t need advanced features.</div>
+            </div>
+            <a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a>
+          </div>
           <div class="cell-div pricing-details highlighted">
             <div class="table-plan-content-parent-squared">
               <div class="div-block-1329">
@@ -132,28 +154,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="plan-description">Start publishing for free, then add a plan to connect a custom domain.</div>
             </div>
             <a href="#Footer-CTA" class="button square-corners blackbg pricing-description w-button">Signup Free<br></a>
-          </div>
-          <div class="cell-div pricing-details">
-            <div class="table-plan-content-parent-squared">
-              <div class="div-block-1329">
-                <div class="pricing-price">$6.90</div>
-                <div class="price-m">USD/user</div>
-              </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $12 paid monthly</div>
-              <div class="plan-description">Best for a small blog that doesn&#x27;t need advanced features.</div>
-            </div>
-            <a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a>
-          </div>
-          <div class="cell-div pricing-details">
-            <div class="table-plan-content-parent-squared">
-              <div class="div-block-1329">
-                <div class="pricing-price">$16.90</div>
-                <div class="price-m">USD/user</div>
-              </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $22 paid monthly</div>
-              <div class="plan-description">For larger, multi site publications or those seeking advanced features</div>
-            </div>
-            <a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a>
           </div>
         </div>
       </div>
@@ -169,9 +169,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -185,9 +185,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -201,9 +201,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -217,9 +217,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -233,9 +233,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -249,9 +249,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -265,9 +265,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -281,9 +281,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -297,9 +297,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
           <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
-          <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
     </div>
@@ -313,9 +313,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
-          <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"></div>
           <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"></div>
+          <div class="cell-div ticks highlighted"></div>
         </div>
       </div>
     </div>
@@ -329,9 +329,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
-          <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"></div>
           <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"></div>
+          <div class="cell-div ticks highlighted"></div>
         </div>
       </div>
     </div>
@@ -345,9 +345,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
-          <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"></div>
           <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"></div>
+          <div class="cell-div ticks highlighted"></div>
         </div>
       </div>
     </div>
@@ -361,9 +361,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
-          <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"></div>
           <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"></div>
+          <div class="cell-div ticks highlighted"></div>
         </div>
       </div>
     </div>
@@ -377,9 +377,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
-          <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"></div>
           <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"></div>
+          <div class="cell-div ticks highlighted"></div>
         </div>
       </div>
     </div>
@@ -393,9 +393,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="line"></div>
         <div class="table-plan-content-parent">
-          <div class="cell-div ticks highlighted"></div>
-          <div class="cell-div ticks"></div>
           <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
+          <div class="cell-div ticks"></div>
+          <div class="cell-div ticks highlighted"></div>
         </div>
       </div>
     </div>
