--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -151,7 +151,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="WordPress Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">(╯°□°)╯︵ ┻━┻</div>
-            <div class="text-block-59">Unless you&#x27;re a code, you&#x27;ll need a visual design plugin or a template, both of which are more suited towards e-commerce sites.</div>
+            <div class="text-block-59">Unless you&#x27;re a coder, you&#x27;ll need a visual design plugin or a template, both of which are more suited towards e-commerce sites.</div>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft Logo"></div>
             <div class="emoticon green">｡◕ ‿ ◕｡</div>
-            <div class="text-block-59">Fully customizable SEO that&#x27;s easy to setup. Jraft publications are built for the modern internet and search engines gives you extra points for mobile friendly design and performance. </div>
+            <div class="text-block-59">Fully customizable SEO that&#x27;s easy to setup. Jraft's publications are built for the modern internet and search engines gives you extra points for mobile friendly design and performance. </div>
           </div>
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="WordPress Logo" class="image-67 wordpress"></div>
