--- a/vs/wix.html
+++ b/vs/wix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jan 18 2021 01:27:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 18 2021 03:14:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7ace6a19656db585edef80" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
-  <link href="https://www.tryjraft.com/vs/wix" rel="canonical"><!--  Google Tag Manager  -->
+  <link href="https://tryjraft.com/vs/wix" rel="canonical"><!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -342,7 +342,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="footer-flex-container">
       <div class="div-block-1402">
         <div class="footer-logo-contact-div">
-          <a href="#" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
+          <a href="../index.html" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
           <div class="div-block-3">
             <a href="mailto:hello@storipress.com?subject=To%20my%20mates%20%40%20Storipress%20..." class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a>
