Minor changes in copy

--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jan 18 2021 03:14:54 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 18 2021 03:23:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -151,7 +151,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="feature-bounding-box _4">
       <div class="div-block-1403">
         <h2 class="heading-8 manager-1">Advanced article management</h2>
-        <div class="text-block-46 manager">Your publication is a factory of content, and your CMS should provide you the tools to manage it as such. With Storipress, all unpublished articles are grouped into drafts, reviewed, and scheduled on a familiar to use kanban board so you can always keep track of article progress and who&#x27;s responsible for what.</div>
+        <div class="text-block-46 manager">Free yourself from workflow hell. In Storipress, all unpublished articles are shown on a kanban board of drafts, reviewed, and scheduled; giving you full visibility of your production pipeline and who&#x27;s responsible for what.</div>
       </div>
       <div data-w-id="609e9c2b-f3cf-991f-0436-7c730b6fc04e" class="div-block-1404">
         <div class="div-block-1413">
@@ -165,7 +165,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="feature-bounding-box _4">
       <div class="div-block-1403 _2">
         <h2 class="heading-8 manager-2">Schedule with context on a full page calendar</h2>
-        <div class="text-block-46 scheduler">Scheduling content without context of your previous and future content pipeline is like driving blind. Storipress shows all your articles on calendar, allowing you to see everything published in the past and what is planned, helping you strategise when and what you should publish in the future.</div>
+        <div class="text-block-46 scheduler">Scheduling content without past publishing context is like driving blind. Storipress shows all your articles on calendar, allowing you to see everything published in the past and future, enabling better content strategy and organisation.</div>
       </div>
       <div data-w-id="91cacccc-4518-6f1b-c957-f6ca096c9673" class="div-block-1404 manager-2">
         <div class="div-block-1413">
