--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 02:20:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 19 2021 04:29:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -136,7 +136,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
-          <h1 class="heading-16">Storipress vs Wordpress</h1>
+          <h1 class="heading-16">WordPress: Hidden Costs</h1>
           <div class="text-block-48">We know what you&#x27;re thinking: but WordPress is &#x27;free&#x27;! However as the saying goes, there&#x27;s no such as a free [website platform].</div>
         </div>
       </div>
