--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 02:20:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 19 2021 04:29:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -137,7 +137,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Storipress vs WordPress</h1>
-          <div class="text-block-48">Comparing Storipress and WordPress is like comparing Notepad and Google Docs. Storipress combines powerful collaboration features with a visual website builder so you can work with your whole team on a centralised platform.</div>
+          <div class="text-block-48">Comparing Storipress and WordPress is like comparing Notepad to Google Docs. Storipress combines powerful collaboration features with a visual website builder so you can work with your whole team on a centralised platform.</div>
         </div>
       </div>
     </div>
