--- a/hosting.html
+++ b/hosting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 04:29:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0308edc68c3868b89a7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -211,12 +211,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="hosting-feature-detail">
         <div class="photo-2"><img src="images/network-illustration.svg" loading="lazy" alt="" class="image-62"></div>
         <h2 class="feature-detail-heading">210+ datacentres &amp; servers worldwide</h2>
-        <div class="feature-detail-description">To ensure your publication loads fast. For everyone (yes, seriously everyone).</div>
+        <div class="feature-detail-description">To ensure your publication loads fast, always all the time.</div>
       </div>
       <div class="hosting-feature-detail">
         <div class="photo-2"><img src="images/scalability.svg" loading="lazy" alt="" class="image-63"></div>
         <h2 class="feature-detail-heading">Infinitely scalable server fleet</h2>
-        <div class="feature-detail-description">So when you go viral, your publication stays up without a hitch.</div>
+        <div class="feature-detail-description">So when you go viral, your publication stays up without a sweat.</div>
       </div>
       <div class="hosting-feature-detail">
         <div class="photo-2"><img src="images/security.svg" loading="lazy" alt="" class="image-20"></div>
