Updated table css

--- a/pricing.html
+++ b/pricing.html
@@ -224,7 +224,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="content-parent">
         <div class="_1st-column">
           <div class="div-block-1338">
-            <h3 class="pricing-feat-detail">100+ responsive templates</h3>
+            <h3 class="pricing-feat-detail">100+ builder blocks</h3>
             <div data-tippy-content="Jraft comes with over 100 professionally designed fully responsive blocks which you stack to build your publication" data-w-id="7b430338-c23e-ab31-268d-ada7400213db" class="tippy"><img src="images/More-Info.svg" loading="lazy" alt="" class="image-36"></div>
           </div>
         </div>
