--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 19 2021 12:29:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -174,14 +174,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </li>
       </ol>
       <p class="paragraph">Whilst you read this article, keep in mind that WordPress comes in two flavors: hosted, and self-hosted. Throughout this post, we&#x27;ll focus on comparing the hosted version to Storipress, as Storipress is also a hosted product.</p>
-      <p class="paragraph">We also won&#x27;t touch on discussing the costs of ecommerce sites — if you&#x27;re looking for e-commerce functionality, Storipress is not the platform for you.</p>
+      <p class="paragraph">We also won&#x27;t touch on discussing the costs of ecommerce sites — if you&#x27;re looking for e-commerce functionality, Storipress probably isn&#x27;t the platform for you.</p>
     </div>
   </div>
   <div class="wp-v-jraft-feature-parent">
     <div class="wp-v-jraft-table pricing-table">
       <div class="row sticky">
         <div class="content-parent">
-          <div class="_1st-column comparison-tables wp-v-jraft">
+          <div class="_1st-column comparison-tables wp-v-jraft feat">
             <h3 class="pricing-feat-top">Feature</h3>
           </div>
           <div class="table-plan-content-parent">
